# vibe

./: .gitignore  .pre-commit-config.yaml  AIDER_PROMPTS.md  CHANGELOG.md  PROMPTS_MILESTONE_2.md  PROMPTS_MILESTONE_3.md  PROMPTS_MILESTONE_4.md  PROMPTS_SEQUENCIAIS.md  README.md  STATUS.md  archeture.md  install-dev.sh  milestone.md  pyproject.toml  scope.md
ai/: .gitkeep
docs/: .gitkeep
objectives/: .gitkeep
scripts/: .gitkeep
src/: .gitkeep  __init__.py  cli.py  database.py  models.py  project.py  test_generator.py  test_runner.py  validator.py
state/: .gitkeep
tests/: .gitkeep  __init__.py  test_cli.py  test_database.py  test_models.py  test_test_generator.py  test_test_runner.py  test_validator.py
